atualizações de tela

--- a/Responsividade/telaCadastroEDIT.HTML
+++ b/Responsividade/telaCadastroEDIT.HTML
@@ -232,7 +232,6 @@
         .movable-div {
             width: 50%;
             height: 100%;
-            background-color: #ff0000;
             position: absolute;
             top: 0;
             /* Muda para o topo */
@@ -324,6 +323,10 @@
             background-color: #ebe8d9;
             border-radius: 25px;
         }
+        img{
+            width: 100%;
+            height: 100%;
+        }
     </style>
 </head>
 
@@ -337,7 +340,7 @@
             <div class="principal-dois">
                 <div class="container-mid registering">
                     <!-- Div que se move -->
-                    <div class="movable-div"></div>
+                    <div class="movable-div"><img src="prod-foto.png" alt=""></div>
                     <div class="left-container">
                         <p>CATEGORIA</p>
                         <select class="input-adm-css">
