--- a/Responsividade/telaCadastroEDIT.HTML
+++ b/Responsividade/telaCadastroEDIT.HTML
@@ -420,7 +420,7 @@
 
 
         window.onload = inicializarEstado;
-        const movableDiv = document.querySelector('.movable-div');
+        const movableDiv = document.querySelector('.v');
         const btnCadastrar = document.getElementById('btn-cadastrar');
         const btnEditar = document.getElementById('btn-editar');
         const leftContainer = document.querySelector('.left-container');
